--- a/package.json
+++ b/package.json
@@ -18,11 +18,15 @@
   "license": "ISC",
   "devDependencies": {
     "@types/cors": "^2.8.13",
+    "@types/debug": "^4.1.7",
     "@types/express": "^4.17.17",
     "@types/morgan": "^1.9.4",
     "@typescript-eslint/eslint-plugin": "^5.52.0",
     "@typescript-eslint/parser": "^5.52.0",
+    "chalk": "^5.2.0",
     "cors": "^2.8.5",
+    "debug": "^4.3.4",
+    "dotenv": "^16.0.3",
     "eslint": "^8.34.0",
     "eslint-config-prettier": "^8.6.0",
     "eslint-config-xo": "^0.43.1",
