--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "express": "^4.18.2",
     "husky": "^8.0.0",
     "lint-staged": "^13.1.2",
+    "mongoose": "^6.10.0",
     "morgan": "^1.10.0",
     "prettier": "^2.8.4",
     "ts-jest": "^29.0.5",
