--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
     "build:dev": "tsc --watch",
     "start": "node dist",
     "start:dev": "node --watch dist",
-    "test": "jest test --passWithNoTests",
-    "test:dev": "jest test --watchAll --passWithNoTests",
-    "test:coverage": "jest test --coverage --watchAll=false --passWithNoTests",
+    "test": "jest test",
+    "test:dev": "jest test --watchAll",
+    "test:coverage": "jest test --coverage --watchAll=false",
     "prepare": "husky install"
   },
   "keywords": [],
@@ -20,7 +20,9 @@
     "@types/cors": "^2.8.13",
     "@types/debug": "^4.1.7",
     "@types/express": "^4.17.17",
+    "@types/jest": "^29.4.0",
     "@types/morgan": "^1.9.4",
+    "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^5.52.0",
     "@typescript-eslint/parser": "^5.52.0",
     "chalk": "^5.2.0",
@@ -33,10 +35,13 @@
     "eslint-config-xo-typescript": "^0.56.0",
     "express": "^4.18.2",
     "husky": "^8.0.0",
+    "jest-ts-webcompat-resolver": "^1.0.0",
     "lint-staged": "^13.1.2",
+    "mongodb-memory-server": "^8.11.5",
     "mongoose": "^6.10.0",
     "morgan": "^1.10.0",
     "prettier": "^2.8.4",
+    "supertest": "^6.3.3",
     "ts-jest": "^29.0.5",
     "typescript": "^4.9.5"
   },
