--- a/package.json
+++ b/package.json
@@ -17,14 +17,17 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
     "@types/cors": "^2.8.13",
     "@types/debug": "^4.1.7",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.4.0",
     "@types/morgan": "^1.9.4",
+    "@types/multer": "^1.4.7",
     "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^5.52.0",
     "@typescript-eslint/parser": "^5.52.0",
+    "bcryptjs": "^2.4.3",
     "chalk": "^5.2.0",
     "cors": "^2.8.5",
     "debug": "^4.3.4",
@@ -40,6 +43,7 @@
     "mongodb-memory-server": "^8.11.5",
     "mongoose": "^6.10.0",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
     "prettier": "^2.8.4",
     "supertest": "^6.3.3",
     "ts-jest": "^29.0.5",
