--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/debug": "^4.1.7",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.4.0",
+    "@types/jsonwebtoken": "^9.0.1",
     "@types/morgan": "^1.9.4",
     "@types/multer": "^1.4.7",
     "@types/supertest": "^2.0.12",
@@ -39,6 +40,7 @@
     "express": "^4.18.2",
     "husky": "^8.0.0",
     "jest-ts-webcompat-resolver": "^1.0.0",
+    "jsonwebtoken": "^9.0.0",
     "lint-staged": "^13.1.2",
     "mongodb-memory-server": "^8.11.5",
     "mongoose": "^6.10.0",
